--- a/amplitude_blue.css
+++ b/amplitude_blue.css
@@ -62,12 +62,12 @@ div#amplitude-right {
         margin-top: 15px; }
     div#amplitude-right div.song div.play-button-container {
       display: none;
-      background: url("images/list-play-light.png") no-repeat;
+      background: url("https://thsconline.github.io/amplitude/images/list-play-light.png") no-repeat;
       width: 22px;
       height: 22px;
       margin-top: 10px; }
     div#amplitude-right div.song div.play-button-container:hover {
-      background: url("images/list-play-hover.png") no-repeat; }
+      background: url("https://thsconline.github.io/amplitude/images/list-play-hover.png") no-repeat; }
     div#amplitude-right div.song.amplitude-active-song-container div.song-now-playing-icon-container img.now-playing {
       display: block; }
     div#amplitude-right div.song.amplitude-active-song-container:hover div.play-button-container {
@@ -324,18 +324,18 @@ div#control-container {
       height: 19px;
       cursor: pointer; }
       div#control-container div#repeat-container div#repeat.amplitude-repeat-off {
-        background: url("images/repeat-off.svg"); }
+        background: url("https://thsconline.github.io/amplitude/images/repeat-off.svg"); }
       div#control-container div#repeat-container div#repeat.amplitude-repeat-on {
-        background: url("images/repeat-on.svg"); }
+        background: url("https://thsconline.github.io/amplitude/images/repeat-on.svg"); }
     div#control-container div#repeat-container div#shuffle {
       width: 23px;
       height: 19px;
       cursor: pointer;
       float: right; }
       div#control-container div#repeat-container div#shuffle.amplitude-shuffle-off {
-        background: url("/amplitude/images/shuffle-off.svg"); }
+        background: url("/amplitude/https://thsconline.github.io/amplitude/images/shuffle-off.svg"); }
       div#control-container div#repeat-container div#shuffle.amplitude-shuffle-on {
-        background: url("/amplitude/images/shuffle-on.svg"); }
+        background: url("/amplitude/https://thsconline.github.io/amplitude/images/shuffle-on.svg"); }
   @media all and (-ms-high-contrast: none) {
     div#control-container *::-ms-backdrop, div#control-container div#control-container {
       margin-top: 40px;
@@ -351,7 +351,7 @@ div#control-container {
         width: 40px;
         height: 40px;
         cursor: pointer;
-        background: url("images/prev.svg");
+        background: url("https://thsconline.github.io/amplitude/images/prev.svg");
         background-repeat: no-repeat;
         float: left;
         margin-top: 10px;
@@ -363,15 +363,15 @@ div#control-container {
         cursor: pointer;
         float: left; }
         div#control-container div#central-control-container div#central-controls div#play-pause.amplitude-paused {
-          background: url("images/play.svg"); }
+          background: url("https://thsconline.github.io/amplitude/images/play.svg"); }
         div#control-container div#central-control-container div#central-controls div#play-pause.amplitude-playing {
-          background: url("images/pause.svg"); }
+          background: url("https://thsconline.github.io/amplitude/images/pause.svg"); }
       div#control-container div#central-control-container div#central-controls div#next {
         display: inline-block;
         width: 40px;
         height: 40px;
         cursor: pointer;
-        background: url("images/next.svg");
+        background: url("https://thsconline.github.io/amplitude/images/next.svg");
         background-repeat: no-repeat;
         float: left;
         margin-top: 10px;
@@ -386,19 +386,19 @@ div#control-container {
       cursor: pointer;
       margin: auto; }
       div#control-container div#volume-container div#shuffle-right.amplitude-shuffle-off {
-        background: url("images/shuffle-off.svg"); }
+        background: url("https://thsconline.github.io/amplitude/images/shuffle-off.svg"); }
       div#control-container div#volume-container div#shuffle-right.amplitude-shuffle-on {
-        background: url("images/shuffle-on.svg"); }
+        background: url("https://thsconline.github.io/amplitude/images/shuffle-on.svg"); }
   div#control-container div.amplitude-mute {
     cursor: pointer;
     width: 25px;
     height: 19px;
     float: left; }
     div#control-container div.amplitude-mute.amplitude-not-muted {
-      background: url("images/volume.svg");
+      background: url("https://thsconline.github.io/amplitude/images/volume.svg");
       background-repeat: no-repeat; }
     div#control-container div.amplitude-mute.amplitude-muted {
-      background: url("images/mute.svg");
+      background: url("https://thsconline.github.io/amplitude/images/mute.svg");
       background-repeat: no-repeat; }
 
 div#control-container:after {
@@ -569,7 +569,7 @@ div#meta-container {
     display: block;
     color: #272726;
     font-size: 20px;
-    font-family: 'Open Sans', sans-serif;
+    
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
@@ -578,7 +578,7 @@ div#meta-container {
     font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
+
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
