--- a/amplitude_blue.css
+++ b/amplitude_blue.css
@@ -94,3 +94,30 @@ progress[value]::-moz-progress-bar {
 
 progress[value]::-webkit-progress-value {
   background-color: #00a0ff; }
+
+div.bottom-container {
+  background-color: #202136;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px; }
+
+/*
+  Small only
+*/
+/*
+  Medium only
+*/
+/*
+  Large Only
+*/
+div#single-song-player {
+  border-radius: 10px;
+  margin: auto;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  margin-top: 50px;
+  width: 100%;
+  max-width: 460px;
+  -webkit-font-smoothing: antialiased; }
+  div#single-song-player img[data-amplitude-song-info="cover_art_url"] {
+    width: 100%;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px; }
