--- a/amplitude_blue.css
+++ b/amplitude_blue.css
@@ -1,4 +1,5 @@
 div.control-container {
+  height: 80px;
   margin-top: 10px;
   padding-bottom: 10px; }
   div.control-container div.amplitude-play-pause {
@@ -14,43 +15,24 @@ div.control-container {
     background: url("https://thsconline.github.io/amplitude/images/pause.svg");
     background-size: cover; }
   div.control-container div.meta-container {
-    float: left;
-    width: calc(100% - 84px);
-    text-align: center;
+    float: left;z
+    width: 200px;
+    text-align: left;
     color: white;
-    margin-top: 10px; }
+    margin-left: 20px;
+    margin-top: 20px;}
     div.control-container div.meta-container span[data-amplitude-song-info="name"] {
-      font-family: "Open Sans", sans-serif;
+    
       font-size: 18px;
       color: #fff;
-      display: block; }
+      display: inline-block; }
     div.control-container div.meta-container span[data-amplitude-song-info="artist"] {
-      font-family: "Open Sans", sans-serif;
+   
       font-weight: 100;
       font-size: 14px;
       color: #fff;
-      display: block; }
-  div.control-container:after {
-    content: "";
-    display: table;
-    clear: both; }
+      display: inline-block; }
 
-/*
-  Small only
-*/
-@media screen and (max-width: 39.9375em) {
-  div.control-container div.amplitude-play-pause {
-    background-size: cover;
-    width: 64px;
-    height: 64px; }
-  div.control-container div.meta-container {
-    width: calc(100% - 74px); } }
-/*
-  Medium only
-*/
-/*
-  Large Only
-*/
 div.time-container {
   opacity: 0.5;
   font-family: 'Open Sans';
@@ -65,15 +47,6 @@ div.time-container {
     float: right;
     margin-right: 5px; }
 
-/*
-  Small only
-*/
-/*
-  Medium only
-*/
-/*
-  Large Only
-*/
 progress.amplitude-song-played-progress {
   background-color: #313252;
   -webkit-appearance: none;
@@ -97,27 +70,12 @@ progress[value]::-webkit-progress-value {
 
 div.bottom-container {
   background-color: #202136;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px; }
+  padding-left:10px;
+  padding-right:20px; }
 
-/*
-  Small only
-*/
-/*
-  Medium only
-*/
-/*
-  Large Only
-*/
+
 div#single-song-player {
   border-radius: 10px;
-  margin: auto;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-  margin-top: 50px;
   width: 100%;
-  max-width: 460px;
-  -webkit-font-smoothing: antialiased; }
-  div#single-song-player img[data-amplitude-song-info="cover_art_url"] {
-    width: 100%;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px; }
+  }
